--- a/code/pheno_ee.ipynb
+++ b/code/pheno_ee.ipynb
@@ -227,6 +227,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Seasonal decomposition of EVI\n",
+    "To extract seasonal pattern"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 177,
    "metadata": {
